# tarlaanaliz-platform

./: .env.example  .gitignore  .gitmodules  DEEP_AUDIT_REPORT_v2.md  DIRECTORY_TREE.md  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  frontend-ci.yml
alembic/: env.py
alembic/versions/: 20260101_002_initial_fields_crops.py  20260101_003_initial_missions.py  20260105_012_indexes_performance.py  20260105_013_full_text_search.py  20260129_kr033_payment_intents.py  20260223_kr015c_mission_schedule_fields.py  20260225_014_kr015_mission_segments.py  20260225_015_kr015_seasonal_reschedule_tokens.py  20260318_add_display_name_expertise_tags.py  20260319_add_crop_type_to_fields.py  20260319_add_field_code.py  20260319_fix_payment_intent_columns.py  20260320_extend_payment_status_check.py  20260322_coop_invites.py  20260322_datasets_table.py  20260322_postgis_gist_index.py  20260322_rls_policies.py  20260323_pilot_earnings_il_operator_announcements.py
data/: pricing_config.json
docs/: README.md  TARLAANALIZ_SSOT_v1_0_0.txt  is_plani_amendments.md
docs/adr/: ADR-001-nine-state-machine.md
docs/api/: openapi.yaml
docs/architecture/: two_server_architecture.md
docs/kr/: kr_registry.md
docs/migration_guides/: MIGRATION_AUDIT_REPORT_v1_2_0.md
nginx/: nginx.conf  tarlaanaliz.conf
scripts/: check_pilots.py  check_ssot_compliance.py  fix_pilot_province.py  fix_pilots.py
src/: __init__.py
src/application/payments/: dtos.py  service.py
src/application/services/: intake_manifest_service.py  pricing_service.py  reassignment_handler.py  worker_dispatch_service.py
src/core/: __init__.py
src/core/domain/entities/: __init__.py  analysis_result.py  dataset.py  field.py  payment_intent.py  subscription.py  user.py
src/core/domain/services/: __init__.py  auto_dispatcher.py  confidence_evaluator.py  reschedule_service.py
src/core/domain/value_objects/: av_scan_mode.py  coverage_ratio_threshold.py  dataset_status.py  geometry.py  role.py
src/core/ports/repositories/: __init__.py  dataset_repository.py
src/infrastructure/: __init__.py
src/infrastructure/config/: drone_registry.yaml  settings.py
src/infrastructure/integrations/sms/: netgsm.py
src/infrastructure/integrations/storage/: s3_storage.py
src/infrastructure/messaging/: rabbitmq_event_bus_impl.py
src/infrastructure/messaging/rabbitmq/: consumer.py
src/infrastructure/monitoring/: health_checks.py
src/infrastructure/notifications/: expert_notification_service.py
src/infrastructure/persistence/: __init__.py  database.py
src/infrastructure/persistence/models/: mission_segment_model.py  payment_intent_model.py  reschedule_request_model.py  weather_block_report_model.py
src/infrastructure/persistence/redis/: cache.py  rate_limiter.py
src/infrastructure/persistence/repositories/: mission_segment_repository.py
src/infrastructure/persistence/sqlalchemy/: __init__.py  models.py  session.py  unit_of_work.py
src/infrastructure/security/: brute_force.py  encryption.py  jwt_handler.py  otp_service.py  pii_log_scrubber.py  query_pattern_analyzer.py  token_blacklist.py
src/presentation/api/: dependencies.py  main.py  service_factory.py  settings.py
src/presentation/api/middleware/: _shared.py  anomaly_detection_middleware.py  grid_anonymizer.py  jwt_middleware.py  pii_filter.py  rate_limit_middleware.py  (+1 more)
tests/presentation/api/: test_v1_auth_change_pin_logout.py  test_v1_calibration_qc_sla.py  test_v1_payments_admin.py
tests/security/: test_pii_filter.py
tests/unit/: test_payment_intent_manual_approval.py  test_ssot_compliance_script.py  test_weather_api_adapter.py
web/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.mjs  playwright.config.ts  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts
web/e2e/tests/: expert_journey.spec.ts  farmer_journey.spec.ts
web/public/: robots.txt
web/public/.well-known/: security.txt
web/src/: middleware.ts
web/src/app/: layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts  twitter-image.tsx
web/src/hooks/: useAdminExperts.ts  useAdminPayments.ts  useAuth.ts  useFields.ts  useMissions.ts  useOfflineQueue.ts  usePilotCapacity.ts  usePricing.ts  useRoleGuard.ts
web/src/lib/: api.ts  apiClient.ts  authStorage.ts  format-utils.ts  http.ts  performance.ts  routes.ts  sanitize.ts
(+153 files in other folders)
